--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,9 +11,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-  dio: ^5.8.0
-  pretty_dio_logger: ^1.4.0
   go_router: ^15.1.2
+  dio: ^5.8.0+1
   get_it: ^8.0.3
   flutter_bloc: ^9.1.1
   shared_preferences: ^2.5.3
@@ -25,7 +24,6 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^5.0.0
-  mocktail: ^1.0.0
 
 flutter:
 
