--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   get_it: ^8.0.3
   flutter_bloc: ^9.1.1
   shared_preferences: ^2.5.3
+  flutter_svg: ^2.2.2
+  either_dart: ^1.0.0
 
   cupertino_icons: ^1.0.8
 
