--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   either_dart: ^1.0.0
 
   cupertino_icons: ^1.0.8
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
