--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   shared_preferences: ^2.5.3
   flutter_svg: ^2.2.2
   either_dart: ^1.0.0
+  equatable: ^2.0.5
 
   cupertino_icons: ^1.0.8
   cached_network_image: ^3.4.1
