--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,12 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   mocktail: ^1.0.0
   bloc_test: ^10.0.0
+  flutter_launcher_icons: ^0.13.1
+  
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/nortus-fav-icon.png"
 
 flutter:
 
